--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -25,7 +25,7 @@
     left: -100%;
     width: 300%;
     height: 300%;
-    background: url('images/background.jpg') no-repeat center center/cover;
+    background: url('/images/background.jpg') no-repeat center center/cover;
     z-index: 0;
     animation: rotate-background 80s linear infinite;
     /* filter: blur(3px); */
